:lipstick: feature/SRM-221 Fix the notifications alignment

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,8 @@
 
 @import "drag_drop";
 
+@import "notifications";
+
 body {
     overflow: hidden;
 }
@@ -166,28 +168,6 @@ table,
 .table-text,
 .table thead tr th {
     font-size: 0.9rem !important;
-}
-
-.card.notification {
-    max-width: 800px;
-    &:first-child {
-        border-radius: 10px 10px 0 0 !important;
-    }
-
-    &:last-child {
-        border-radius: 0 0 10px 10px !important;
-    }
-
-    &.unread {
-        background: rgba(112, 181, 249, 0.2);
-    }
-
-    & a {
-        color: inherit;
-    }
-    & a:hover {
-        color: inherit;
-    }
 }
 
 .text-white {
